--- a/package.json
+++ b/package.json
@@ -6,25 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "prepare": "husky",
+    "format": "npx @biomejs/biome format --write .",
+    "lint": "npx @biomejs/biome lint .",
+    "check": "npx @biomejs/biome check --apply ."
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
-    "@eslint/eslintrc": "^3.3.1",
     "@gsap/react": "^2.1.2",
     "@preact/signals-react": "^3.3.1",
     "autoprefixer": "^10.4.21",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^16.4.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
@@ -34,18 +28,20 @@
     "react-dom": "19.2.0",
     "react-inlinesvg": "^4.2.0",
     "sass": "^1.93.2",
-    "sass-embedded": "^1.93.2",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
-    "prettier": "3.6.2",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json}": [
+      "npx @biomejs/biome check --write --unsafe --no-errors-on-unmatched --files-ignore-unknown=true"
+    ]
   }
 }
