Refactor Container and GridDebug components to improve structure and styling, enhance SCSS for grid layout, and update typography components to utilize BaseText for consistency. Add new enum for typography tags in the Heading and Label components.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
       "@Utils/*": ["./src/utils/*"],
       "@Motions/*": ["./src/motions/*"],
       "@Store/*": ["./src/store/*"],
-      "@Interactive/*": ["./src/interactive/*"]
+      "@Interactive/*": ["./src/interactive/*"],
+      "@Enums/*": ["./src/enums/*"]
     }
   },
   "include": [
