--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@gsap/react": "^2.1.2",
     "@preact/signals-react": "^3.3.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.13.1",
     "classnames": "^2.5.1",
