--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.65.0",
     "react-inlinesvg": "^4.2.0",
     "react-scan": "^0.4.3",
     "sass": "^1.93.2",
