--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "embla-carousel-auto-scroll": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "globals": "^16.4.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
