--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "globals": "^16.4.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
-    "next": "16.0.0",
+    "next": "^16.0.2",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "react-inlinesvg": "^4.2.0",
     "react-scan": "^0.4.3",
