--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-  "singleQuote": false,
-  "trailingComma": "all",
+  "semi": true,
+  "trailingComma": "es5",
+  "singleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
-  "semi": true,
-  "arrowParens": "always"
+  "endOfLine": "auto"
 }
 
 
