--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "next start",
     "prepare": "husky",
     "format": "prettier --write .",
-    "lint": "eslint .",
-    "check": "tsc --noEmit"
+    "lint": "eslint --cache --cache-location .next/cache/eslint/",
+    "lint:fix": "eslint --fix",
+    "lint:nocache": "eslint",
+    "lint:debug": "eslint --debug eslint.config.ts",
+    "lint:print": "eslint --print-config eslint.config.ts",
+    "lint:inspect": "eslint --inspect-config"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
     "@gsap/react": "^2.1.2",
+    "@next/eslint-plugin-next": "^16.0.4",
     "@preact/signals-react": "^3.5.0",
     "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "^10.4.21",
@@ -23,6 +28,11 @@
     "dayjs": "^1.11.18",
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^16.4.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
@@ -34,38 +44,19 @@
     "react-inlinesvg": "^4.2.0",
     "react-scan": "^0.4.3",
     "sass": "^1.93.2",
+    "typescript-eslint": "^8.48.0",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
-    "@eslint-react/eslint-plugin": "^2.3.7",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.39.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.48.0",
-    "@typescript-eslint/parser": "^8.48.0",
-    "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.4",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import-x": "^4.16.1",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
-    "eslint-plugin-regexp": "^2.10.0",
-    "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unused-imports": "^4.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
-    "typescript": "^5",
-    "typescript-eslint": "^8.48.0"
+    "typescript": "^5"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --cache --fix"
-    ],
     "*.{js,jsx,ts,tsx,css,scss,md,json}": [
       "prettier --write"
     ]
