--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "framer-motion": "^12.23.24",
     "globals": "^16.4.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
-    "next": "^16.0.2",
+    "next": "^16.0.4",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -45,7 +46,8 @@
     "react-scan": "^0.4.3",
     "sass": "^1.93.2",
     "typescript-eslint": "^8.48.0",
-    "usehooks-ts": "^3.1.1"
+    "usehooks-ts": "^3.1.1",
+    "zod-validation-error": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
